# rust-oauth2-server

./: .dockerignore  AGENTIC_QUICKSTART.md  Cargo.toml  DOCKERHUB.md  Dockerfile.ci  Dockerfile.prebuilt  README.md
.github/agents/: operations.md  security.md
.github/workflows/: ci.yml  e2e-kind.yml  release.yml
crates/oauth2-actix/: Cargo.toml
crates/oauth2-server/: Cargo.toml
crates/oauth2-storage-factory/: Cargo.toml
crates/oauth2-storage-factory/src/: lib.rs
crates/oauth2-storage-sqlx/: Cargo.toml
docs/: eventing.md  index.md
docs/architecture/: actors.md  database.md
docs/deployment/: docker.md  dockerhub.md
docs/flows/: authorization-code.md  client-credentials.md  password.md  refresh-token.md
docs/getting-started/: configuration.md
docs/operations/: runbooks.md
k8s/: README.md
k8s/base/: configmap-migrations.yaml  configmap.yaml  deployment.yaml  flyway-migration-job.yaml  kustomization.yaml  secret.yaml
mcp-server/: package-lock.json
mcp-server/src/: index.js
scripts/: kind_up_observability.sh
src/: lib.rs  main.rs  metrics.rs  openapi.rs  telemetry.rs
src/actors/: auth_actor.rs  client_actor.rs  mod.rs  token_actor.rs
src/config/: mod.rs
src/db/: mod.rs
src/events/: actix_bus.rs  bus.rs  envelope.rs  mod.rs
src/handlers/: admin.rs  auth.rs  client.rs  events.rs  mod.rs  oauth.rs  token.rs  wellknown.rs
src/middleware/: auth_middleware.rs  metrics_middleware.rs  mod.rs
src/models/: mod.rs  social.rs  (+1 more)
tests/: bdd.rs  migrations_postgres.rs  mongo_storage.rs  security_http.rs  storage_factory.rs  unit_tests.rs
(+21 files in other folders)
